Lint warning changes.